--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
 <body>
     <header>alex g acabando com a paz de todos</header>
     
-<section>
-    <h3>Every year im getting older, but everyday i feel the same</h3>
-    <iframe width="560" height="315" src="https://youtu.be/yyH4HnCXtc0?si=mCeTvO8I3SpJbp1O" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-</section>
+    <section>
+        <h2>Every year im getting older, but everyday i feel the same</h2>
+        <a href="https://www.youtube.com/watch?v=yyH4HnCXtc0" target="_blank" title="YouTube video player">
+            <img src="https://img.youtube.com/vi/yyH4HnCXtc0/hqdefault.jpg" width="560" height="315" alt="Thumbnail do vídeo">
+        </a>
+    </section>
 
 </body>
 </html>
