--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
     
     <section>
         <h2>Every year im getting older, but everyday i feel the same</h2>
-        <a href="https://www.youtube.com/watch?v=yyH4HnCXtc0" target="_blank" title="YouTube video player">
-            <img src="https://img.youtube.com/vi/yyH4HnCXtc0/hqdefault.jpg" width="560" height="315" alt="Thumbnail do vídeo">
-        </a>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/yyH4HnCXtc0?si=SMuKMPJT-nrsuaUq" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </section>
 
 </body>
