--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
     <header>alex g acabando com a paz de todos</header>
     
     <section>
+        <div class="chamada-texto">
         <h2>Every year im getting older, but everyday i feel the same</h2>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/Qhn8SvGWCmI?si=kzkRGfyJlE5XnXD-" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> f
+        </div>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/Qhn8SvGWCmI?si=kzkRGfyJlE5XnXD-" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> 
     </section>
 
 </body>
